fix modal on mobile 2

--- a/src/react-components/modal/Modal.scss
+++ b/src/react-components/modal/Modal.scss
@@ -14,6 +14,7 @@
   max-width: 85vw;
   @media (max-width: 992px) {
     max-width: 100vw;
+    height: 100vh;
   }
 }
 
